tests/compile-fail/bitflags_trait_deprecated.rs
#![deny(warnings)]

pub use bitflags::BitFlags;

fn main() {}
